// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documents Should generate an HCP form 1`] = `
Object {
  "untitled1": "John Smith",
  "untitled10": "",
  "untitled11": "",
  "untitled12": "",
  "untitled13": "",
  "untitled14": "",
  "untitled15": "",
  "untitled16": "",
  "untitled17": "",
  "untitled18": "",
  "untitled19": "",
  "untitled2": "",
  "untitled21": "08",
  "untitled22": "01",
  "untitled23": "2020",
  "untitled24": "09",
  "untitled25": "01",
  "untitled26": "2020",
  "untitled29": "All work",
  "untitled3": "0000",
  "untitled30": "",
  "untitled31": "4",
  "untitled32": "",
  "untitled33": "",
  "untitled34": "",
  "untitled35": "",
  "untitled36": "",
  "untitled37": "",
  "untitled38": "",
  "untitled39": "Theodore Cure, MD",
  "untitled4": "06",
  "untitled40": "[assume license is valid]",
  "untitled41": "General Medicine",
  "untitled42": "[assume business is valid]",
  "untitled43": "",
  "untitled44": "555-555-5555",
  "untitled45": "example@example.com",
  "untitled46": "John Smith",
  "untitled47": "John Smith",
  "untitled48": "John Smith",
  "untitled5": "07",
  "untitled50": "John Smith",
  "untitled51": true,
  "untitled52": false,
  "untitled53": false,
  "untitled54": false,
  "untitled55": false,
  "untitled56": true,
  "untitled57": false,
  "untitled58": false,
  "untitled59": true,
  "untitled6": "2020",
  "untitled60": true,
  "untitled61": false,
  "untitled62": false,
  "untitled63": false,
  "untitled64": false,
  "untitled65": true,
  "untitled66": false,
  "untitled67": true,
  "untitled68": false,
  "untitled69": true,
  "untitled7": "",
  "untitled70": false,
  "untitled71": false,
  "untitled72": true,
  "untitled73": false,
  "untitled74": false,
  "untitled75": false,
  "untitled76": false,
  "untitled77": false,
  "untitled78": false,
  "untitled79": true,
  "untitled8": "",
  "untitled80": true,
  "untitled81": false,
  "untitled82": true,
  "untitled83": false,
  "untitled84": true,
  "untitled85": false,
  "untitled86": false,
  "untitled87": true,
  "untitled88": true,
  "untitled89": false,
  "untitled9": "",
  "untitled90": false,
  "untitled91": false,
  "untitled92": false,
  "untitled93": false,
}
`;

exports[`Documents Should generate an ID front 1`] = `
Object {
  "Address city": "Example",
  "Address state": "MA",
  "Address street": "123 Test Way",
  "Date birth": "06/07/2020",
  "Date expiration": "01/01/2028",
  "Date issue": "01/01/2020",
  "License number": "12345",
  "Name first": "John",
  "Name last": "Smith",
  "address ZIP": "01000",
}
`;

exports[`Documents Should generate an invalid HCP form 1`] = `
Object {
  "untitled1": "John Smith",
  "untitled10": "",
  "untitled11": "",
  "untitled12": "",
  "untitled13": "",
  "untitled14": "",
  "untitled15": "",
  "untitled16": "",
  "untitled17": "",
  "untitled18": "",
  "untitled19": "",
  "untitled2": "",
  "untitled21": "08",
  "untitled22": "01",
  "untitled23": "2020",
  "untitled24": "09",
  "untitled25": "01",
  "untitled26": "2020",
  "untitled29": "All work",
  "untitled3": undefined,
  "untitled30": "",
  "untitled31": "4",
  "untitled32": "",
  "untitled33": "",
  "untitled34": "",
  "untitled35": "",
  "untitled36": "",
  "untitled37": "",
  "untitled38": "",
  "untitled39": "Theodore Cure, MD",
  "untitled4": "06",
  "untitled40": "[assume license is valid]",
  "untitled41": "General Medicine",
  "untitled42": "[assume business is valid]",
  "untitled43": "",
  "untitled44": "555-555-5555",
  "untitled45": "example@example.com",
  "untitled46": "John Smith",
  "untitled47": "John Smith",
  "untitled48": "John Smith",
  "untitled5": "07",
  "untitled50": "John Smith",
  "untitled51": true,
  "untitled52": false,
  "untitled53": false,
  "untitled54": false,
  "untitled55": false,
  "untitled56": true,
  "untitled57": false,
  "untitled58": false,
  "untitled59": true,
  "untitled6": undefined,
  "untitled60": true,
  "untitled61": false,
  "untitled62": false,
  "untitled63": false,
  "untitled64": false,
  "untitled65": true,
  "untitled66": false,
  "untitled67": true,
  "untitled68": false,
  "untitled69": true,
  "untitled7": "",
  "untitled70": false,
  "untitled71": false,
  "untitled72": true,
  "untitled73": false,
  "untitled74": false,
  "untitled75": false,
  "untitled76": false,
  "untitled77": false,
  "untitled78": false,
  "untitled79": true,
  "untitled8": "",
  "untitled80": true,
  "untitled81": false,
  "untitled82": true,
  "untitled83": false,
  "untitled84": true,
  "untitled85": false,
  "untitled86": false,
  "untitled87": true,
  "untitled88": true,
  "untitled89": false,
  "untitled9": "",
  "untitled90": false,
  "untitled91": false,
  "untitled92": false,
  "untitled93": false,
}
`;
